@@ -3,15 +3,18 @@ package com.fulljob.api.models.entities;
 import java.io.Serializable;
 import java.time.LocalDate;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -54,21 +57,49 @@ public class Usuario implements Serializable, UserDetails {
 
 	// METODOS CLASE USERDETAILS DE SPRINGSECURIRY 
 
+	@Transient
+	private List<SimpleGrantedAuthority> authorities;
+
+	
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-	    return List.of(rol.split(",")).stream()
-	        .map(role -> (GrantedAuthority) () -> role.trim())
-	        .toList();
+	    return Collections.singletonList(new SimpleGrantedAuthority(rol));
 	}
+
+	public void setAuthorities(List<SimpleGrantedAuthority> authorities) {
+	    this.authorities = authorities;
+	}
+
 
 	@Override
 	public String getUsername() {
-		return email;
+	    return email;
 	}
 
 	@Override
 	public String getPassword() {
-	     return password;
+	    return password;
 	}
+
+	@Override
+	public boolean isAccountNonExpired() {
+	    return true;
+	}
+
+	@Override
+	public boolean isAccountNonLocked() {
+	    return true;
+	}
+
+	@Override
+	public boolean isCredentialsNonExpired() {
+	    return true;
+	}
+
+	@Override
+	public boolean isEnabled() {
+	    return enabled != null && enabled == 1;
+	}
+
 	  
 }
